# django-flatly

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pytest.ini  requirements_dev.txt  setup.cfg  tox.ini
.run/: django-flatly.run.xml
flatly/: conf.py  helpers.py  urls.py  views.py
tests/: db.sqlite3  settings.py  urls.py
tests/app/templates/app/: index.html  section.html
tests/templates/: blog.html  index.html
tests/templates/about/: index.html  staff.html
tests/templates/app/: section.html
tests/templates/blog/: index.html
tests/templates/flatly_root/: about.html  blog.htm
tests/tests/: test_append_slash.py  test_conf.py  test_urls.py
