[metadata]
name = django-flatly
version = 0.1.0
description = Serving flat pages with Django without applications and views
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/django-flatly
license = BSD
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
python_requires = >= 3.6
install_requires =
  Django>=1.11
packages = find:

[options.extras_require]
testing =
  pytest
  pytest-django
  pytest-xdist

[tool:pytest]
addopts = --showlocals -rfs
filterwarnings =
  ignore:.*Remove the context parameter
norecursedirs =
  dist
  build
  .tox
