[metadata]
name = django-flatly
version = 0.1.0
description = Serving flat pages with Django without views
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/django-flatly
license = BSD
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
python_requires = >= 3.6
install_requires =
  Django>=2.0
packages = find:

[options.extras_require]
dev =
  tox
  pytest
  pytest-django
  pytest-env
  pytest-pythonpath
  pytest-xdist

[tool:pytest]
DJANGO_SETTINGS_MODULE = settings
python_paths = tests/
addopts = --showlocals -rf -s
filterwarnings =
  ignore:.*Remove the context parameter
norecursedirs =
  dist
  build
  .tox
