[metadata]
name = django-flatly
version = 0.1.0
description = Serving flat pages with Django without views and database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/django-flatly
license = BSD license
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Software Development :: Libraries :: Python Modules

[bdist_wheel]
universal = 1

[options]
zip_safe = false
python_requires = >= 3.6
install_requires =
  Django>=2.0
packages = find:

[tool:pytest]
DJANGO_SETTINGS_MODULE = settings
collect_ignore = ['setup.py']
python_paths = tests/
addopts = --cov=flatly --showlocals -rf -s
filterwarnings =
  ignore:.*Remove the context parameter
norecursedirs =
  dist
  build
  .tox

[coverage:run]
source = flatly
omit = tests/*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __repr__
  if self\.debug

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError

  # Don't complain if non-runnable code isn't run:
  if 0:
  if __name__ == .__main__.:
